--- a/kap8/kap8.tex
+++ b/kap8/kap8.tex
@@ -91,6 +91,27 @@ Summe der Kubikzahlen
 
 \end{Beweis}\\\\
 
+\begin{Beweis}
+Beweis einer Absch"atzung der Fakult"at \\
+$\forall n\in \N,\quad n\geq 4 : \quad n! >n^2 $\\\\
+
+\begin{array}{rl}
+
+\textbf{Induktionsanfang}: & $n_{o}=4 : \quad 4! = 4\cdot3 \cdot 2 \cdot 1 \cdot 0! = 24>16=4^2 $\\\\
+\textbf{Induktionsvorraussetzung}: & $\exists n\in\N, \quad n\geq 4:\quad n!>n^2  $\\\\
+\textbf{Induktionsbehauptung}: & $ n!\,\geq n^2 \Rightarrow (n+1)! > (n+1)^2 = \textcolor{red}{ (n+1)\cdot(n+1)} $\\\\
+\textbf{Induktionsschluss}: &  $(n+1)! = (n+1)\cdot n ! \quad>\quad \textcolor{red}{ (n+1)\cdot n^2}  $\\\\
+&$ \Rightarrow n^2 \overset{\mathrm{?}}{>} (n+1)  $\\\\
+\textbf{Mini-induktion}: &$n_{0}=4: \quad 4^2=16>5=4+1 $\\\\
+&$ \Rightarrow (n^2)' \overset{\mathrm{?}}{>} (n+1)' $\\\\
+&$\Leftrightarrow 2n \overset{\mathrm{!}}{>} 1 \qquad \forall n \in \N $\\
+\end{array}
+
+\end{Beweis}
+
+
+
+
 
 
 
