--- a/kap11/kap11.tex
+++ b/kap11/kap11.tex
@@ -105,7 +105,7 @@ Bei einem unbestimmten Integral erhält man als Lösung eine Funktion, eine soge
   unterscheiden.
 \end{Definition}
 \begin{Bemerkung}
-  Man beobachtet hier eine Erwiterung der NEW-Regel (siehe \ref{NEW-Regel}, NEW-Regel):\\\\
+  Man beobachtet hier eine Erweiterung der NEW-Regel (siehe \ref{NEW-Regel}, NEW-Regel):\\\\
   \begin{minipage}[b]{0.2\linewidth}
     N $=$ Nullstellen\\
     E $=$ Extremstellen\\
@@ -587,5 +587,10 @@ Unklar, ich weiß. (Ich habe es selbst noch nicht verstanden)
   Analog dazu spricht man von einem uneigentlichen Integral für $\int_{-\infty}^b f(x)dx$
 \end{Definition}
 \begin{Beispiel}
-  $f(x)= \dfrac{1}{\sqrt x}
+  $f(x)=\dfrac{-3}{x^3}$\\
+  $A(z)=\int_z^{-2} \dfrac{-3}{x^3} dx = [\dfrac{3}{2}x^{-2}]_z^{-2} = \dfrac{3}{8}-\dfrac{3}{2}z^{-2}$
+  $\lim \limits_{z \rightarrow \infty} \dfrac{3}{8}-\dfrac{3}{2}z^{-2} = \dfrac{3}{8}$
 \end{Beispiel}
+\begin{Bemerkung}
+Für Funktionen wie $f(x)= \dfrac{1}{\sqrt x}$ existiert kein Uneigentliches Integral.\\Stimmt nicht, sieht aber als Platzhalter gut aus.
+\end{Bemerkung}
