Sommerpause ist fertig

--- a/kap12/kap12.tex
+++ b/kap12/kap12.tex
@@ -59,15 +59,18 @@ $e$ ist darstellbar bzw. ergibt sich durch:
 
 	\subsection{Herleitung zur Zahl $e$}
 
-Anhand mancher Überlegungen, denen wir jetzt nachgehen werden, lassen sich einige Eigenschaften der Eulerschen Zahl schließen.\\
 \\ Wir definieren eine Folge $(e_{n})n\in\N$ durch $e_{n}=\left(1+\dfrac{1}{n}\right)^n$ und versuchen ihre Konvergenz zu beweisen.
 \begin{itemize}
-\item$\dfrac{e_{n+1}}{e_{n}}=\dfrac{{\left(1+\dfrac{1}{n+1}\right)}^{n+1}}{{\left(1+\dfrac{1}{n+1}\right)}^{n}}=\left(\dfrac{n(n+2)}{(n+1)^2}\right)^n\cdot\left(1+\dfrac{1}{n}\right)=\left(1-\dfrac{1}{(n+1)^2}\right)^{n+1}\cdot\dfrac{n+1}{n}$
-\item Die Umformung ermöglicht uns auf den Term ${\left(1-\dfrac{1}{(n+1)^2}}\right)^{n+1}$, die Ungleichung von Bernoulli anzuwenden. Diese besagt Folgendes: $(1+x)^n>1+nx$ für $n\geq2$ und $x>-1$\\
-$\left(1-\dfrac{1}{(n+1)^2}\right)^{n+1}>1+(n+1)\cdot\left(-\dfrac{1}{(n+1)^2}\right)$
+\item$\dfrac{e_{n+1}}{e_{n}}=\dfrac{{\left(1+\dfrac{1}{n+1}\right)}^{n+1}}{{\left(1+\dfrac{1}{n+1}\right)}^{n}}=\left(\dfrac{n(n+2)}{(n+1)^2}\right)^n\cdot\left(1+\dfrac{1}{n}\right)=\textcolor{green}{\left(1-\dfrac{1}{(n+1)^2}\right)^{n+1}}\cdot\textcolor{red}{\dfrac{n+1}{n}}$
+\item Die Umformung ermöglicht uns auf den Term ${\left(1-\dfrac{1}{(n+1)^2}}\right)^{n+1}$ die Ungleichung von Bernoulli anzuwenden. Diese besagt Folgendes: $(1+x)^n>1+nx$ für $n\geq2$ und $x>-1$\\
+$\Rightarrow\left(1-\dfrac{1}{(n+1)^2}\right)^{n+1}>1+(n+1)\cdot\left(-\dfrac{1}{(n+1)^2}\right)=1-\dfrac{1}{n+1}=\dfrac{n}{n+1}$
 \item Dies kann man an den ersten Ausdruck anwenden:\\
-$\Rightarrow\left(1-\dfrac{1}{(n+1)^2}\right)^{n+1}\cdot\dfrac{n+1}{n}>1+(n+1)\cdot\left(-\dfrac{1}{(n+1)^2}\right)\cdot\dfrac{n+1}{n}=1-\dfrac{1}{n}$
-
+$\Rightarrow\dfrac{e_{n+1}}{e_{n}}=\left(1-\dfrac{1}{(n+1)^2}\right)^{n+1}\cdot\dfrac{n+1}{n}\textcolor{green}{>\dfrac{n}{n+1}}\cdot\textcolor{red}{\dfrac{n+1}{n}}=1$\\\\
+\textbf{$\Rightarrow e_{n}$ ist streng monoton steigend}
+\end{itemize}
+Sei eine Folge $f_{n}$ mit $f_{n}=\left(1+\dfrac{1}{n}\right)^{n+2}$, deren Monotonieverhalten wir untersuhen wollen.
+\begin{itemize}
+\item$\dfrac{f_{n}}{f_{n+1}}=\dfrac{\left(1+\dfrac{1}{n}\right)^{n+1}}{\left(1+\dfrac{1}{n}\right)^{n+2}}=\left(\dfrac{1+\dfrac{1}{n}}{1+\dfrac{1}{n+1}}\right)^{n+2}\cdot\dfrac{1}{1+\dfrac{1}{n}}=\left(\dfrac{\dfrac{n+1}{n}}{\dfrac{n+2}{n+1}}\right)\cdot\dfrac{n}{n+1}$
 \end{itemize}
 
 \section{Eigenschaften}
