--- a/kap2/kap2.tex
+++ b/kap2/kap2.tex
@@ -79,7 +79,7 @@ $s_{n}=\dfrac{n\cdot(2a_{x}+(n-1)\cdot d)}{2}$
 \end{Bemerkung}
 
 \begin{Beweis}
-Sei eine arithmetische Folge $a$, mit Startglied $a_{x}$ und Differenz $d$, und $s$ die entsprechende Reihe ist.\\
+Sei eine arithmetische Folge $a$, mit Startglied $a_{x}$ und Differenz $d$, und $s$, die entsprechende Reihe, dann gilt\\
 $s_{n}=a_{x}+a_{x+1}+a_{x+2}+...a_{x+n-1}\\
 =a_{x}+(a_{x}+d)+(a_{x}+2d)+...+(a_{x}+(n-1)\cdot d})\\
 =n\cdot a_{x}+d+2d+...+(n-1)\cdot d\\
