--- a/kap2/kap2.tex
+++ b/kap2/kap2.tex
@@ -53,9 +53,10 @@ für alle $n$ \\
 und $g(0)=\dfrac{0\cdot 1}{2}=0$\\
 \\
 \underline{Quelle:} Wikipedia (Gaußsche Summenformel)\\
-\underline{Bemerkung:} auch ein Beweis durch vollständige Induktion ist möglich
 \end{Beweis}
-
+\begin{Bemerkung}
+Auch ein Beweis durch vollständige Induktion ist möglich, dieser wäre sogar empfehlenswert, da er einfacher durchzuführen ist: (Ziehe Kapitel 8)
+\end{Bemerkung}
 
 
 	\subsection{Allgemein}
