--- a/kap12/kap12.tex
+++ b/kap12/kap12.tex
@@ -113,12 +113,12 @@ Sei $f$ eine Funktion mit $f(x)=xe^{1-x}$ mit Schaubild $\mathcal{C}$\\
 \item Monotonieverhalten:\\
 \begin{align*}
 f\prime(x)&=e^{1-x}-xe^{1-x}\\
-&=(1-x)e^{1-x}
+&=(1-x)\cdot e^{1-x}
 \end{align*}
-\begin{array}{rcl}
-$\forall x<1$: &$f\prime(x)>0&\Leftrightarrow f \nearrow$\\
-für $x=1$: &$f\prime(x)=0$ und VZW $+\rightarrow-&\Leftrightarrow$ Hochpunkt\\
-$\forall x>1$: &$f\prime(x)<0 &\Leftrightarrow f \searrow$\\
+\begin{array}{rlcl}
+$\forall x<1$: &$f\prime(x)>0&&\Leftrightarrow f \nearrow$\\
+\text{für }$$x=1$$: &$f\prime(x)=0$&\mbox{und VZW }$+\rightarrow-&\Leftrightarrow$ Hochpunkt\\
+$\forall x>1$: &$f\prime(x)<0 &&\Leftrightarrow f \searrow$\\
 \end{array}
 \\
 
