--- a/kap13/kap13.tex
+++ b/kap13/kap13.tex
@@ -1,9 +1,49 @@
 \chapter{Logarithmen}
 
 \begin{Definition}
+Der Logarithmus einer Zahl ist der Exponent, mit dem die Basis des Logarithmus' potenziert werden muss, um die gegebene Zahl zu erhalten. Logarithmen sind nur für positive reelle Zahlen definiert, die Basis muss positiv und ungleich $1$  sein
+\begin{center}
+$\log_ba=x\Leftrightarrow b^x=a$
+\end{center}
+\end{Definition}
+
+\begin{Definition}
+Man bezeichnet als Logarithmusfunktion eine Funktion der Form $x\rightarrow \log_bx$ mit $b\in \R^+\backslash 1$\\
+$x$ ist die Variable und wird \textcolor{red}{???} genannt, Logarithmusfunktionen sind nur für positive, reelle Zahlen definiert: $x\in\R^+$\\
+$b$ nennt man \textit{Basis} oder \textit{Grundzahl}, sie ist für jede Funktion fest forgegeben.\\
+
 \end{Definition}
 
 Hier Graphen
+\subsubsection{Besondere Logarithmen}
 
+\begin{tabular}{rccl}
+Logarithmus naturalis:&$\ln a$&$:=$&$\log_ea$\\
+Logarithmus dualis:&$ld\:a$&$:=$&$\log_2a$\\
+Dekadischer Logarithmus:&$\lg a$&$:=$&$\log_{10}a
+\end{tabular}
+\\
 	\section{Eigenschaften}	
+
+\begin{itemize}
+\item$f(x)=\log_bx$
+\item$b\in\R^+\backslash 1$
+\item$D_f=\R^+$
+\item$W_f=\R$
+\item für $0>b>1$: $f$ ist streng monoton wachsend\\
+für $b>1$: $f$ ist streng monoton fallend
+\item für $0>b>1$: $\lim\limits_{x\to +\infty}f(x)=-\infty$\\
+			$\lim\limits_{x\to 0}f(x)=+\infty$\\
+für $b>1$: $\lim\limits_{x\to +\infty}f(x)=+\infty$\\
+	        $\lim\limits_{x\to 0}f(x)=-\infty$
+\item $f(1)=0$
+\item y-Achse ist senkrechte Asmyptote
+
+
+\end{itemize}
 	\section{Rechengesetze}
+
+Aus den Potenzgesetzen kann man die Logarithmussätze erhalten.
+
+\begin{enumerate}
+\end{enumerate}
