--- a/kap15/kap15.tex
+++ b/kap15/kap15.tex
@@ -159,14 +159,26 @@ $\varepsilon_{0}$: permittivité du vide (réponse d'un milieu donné a un champ
 \danger[5ex] \qquad $\vv{F}$ et $\vv{E}$ n'ont pas forcément le meme sens, cela dépend de la charge $q$\\\\
 
 La relation entre force électrique et champ électrique s'exprime avec $q$ (Coulombs), charge de source:
-$$\vv{F_{e}}=q\cdot \vv{E}$$\\
+$$\vv{F_{e}}=q\cdot \vv{E}$$
 $$\Rightarrow F_{e}=|q|\cdot E$$\\\\
-Le champ électrique s'exprime donc de cette maniere:
-$$\vv{E}= \dfrac{1}{4\pi\varepsilon_{0}}\cdot\dfrac{q}{r^2}\cdot\vv{U}_{A/B}$$\\
+Le champ électrique s'exprime donc de cette maniere:\\\\
+\begin{tikzpicture}
+    \draw (0,0) node {};
+    \draw (7.85,0) node {$\vv{E}= \dfrac{1}{4\pi\varepsilon_{0}}\cdot\dfrac{q}{r^2}\cdot\vv{U}_{A/B}$};
+    \draw[line width=0.4pt] (5.9,-0.05) -- (5.1,-0.4) node[color=blue,left] {$J$};
+    \draw[line width=0.4pt] (8.5,0.25) -- (9.2,0.7) node[color=blue,right] {$C$};
+    \draw[line width=0.4pt] (8.51,-0.3) -- (9.7,-0.7) node[color=blue,right] {$m^{2}$};
+\end{tikzpicture}\\\\
 $\vv{E}$ va dans le sens des potentiels décroissants\\
 Les lignes de champ sont tangentes aux vecteurs champ électrique tandis que les équipotentielles relient les points ou le champ électrique possede la meme valeur(intensité) \\\\
-Dans un condensateur plan, le champ électrique est uniforme (lignes de champ paralleles) et la valeur du champ électrique est
-$$E=\dfrac{|U_{ab}|}{d}$$
+Dans un condensateur plan, le champ électrique est uniforme (lignes de champ paralleles) et la valeur du champ électrique est\\
+\begin{tikzpicture}
+    \draw (0,0) node {};
+    \draw (7.85,0) node {$E=\dfrac{|U_{ab}|}{d}$};
+    \draw[line width=0.4pt] (6.9,0) -- (5.9,-0.45) node[color=blue,left] {$J$};
+    \draw[line width=0.4pt] (8.7,0.25) -- (9.5,0.25) node[color=blue,right] {$V$};
+    \draw[line width=0.4pt] (8.6,-0.3) -- (9.7,-0.6) node[color=blue,right] {$m$};
+\end{tikzpicture}\\
 et, avec $Q$ (charge totale) et $S$ (surface des armatures)
 \\
 \definecolor{betterPurple}{rgb}{0.6,0,1}
@@ -190,6 +202,7 @@ et, avec $Q$ (charge totale) et $S$ (surface des armatures)
 
 \textbf{Dans une bobine:} Soit $B_{i}$ l'intensité du champ magnétique, $I$ l'intensité du courant, $N$ le nombre de spires (jointives) et $l$ la longueur de la bobine,
 
+\definecolor{betterPurple}{rgb}{0.6,0,1}
 \begin{tikzpicture}
     \draw (0,0) node {};
     \draw (7.85,0) node {$B_{i}=\mu_{0}\cdot\dfrac{N\cdotI}{l}}$};
@@ -239,13 +252,23 @@ $$f(\text{Hz}) = \dfrac{1}{T(\text{s})} = \dfrac{\omega\, (\text{rad/s})}{2\pi(\
 
 \section{Les 3 lois de Newton}
 
+\subsection{$1^{ere}$ loi}
 
+\begin{Definiton}
+bla
+\end{Definition}
 
+\subsection{$2^{eme}$ loi}
 
+\begin{Definiton}
+bla
+\end{Definition}
 
+\subsection{$3^{eme}$ loi}
 
-
-
+\begin{Definiton}
+bla
+\end{Definition}
 
 
 
